kubernetes/apps/observability/kube-prometheus-stack/app/httproutes.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
  annotations:
    glance/hide: "true"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "alertmanager.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
  annotations:
    glance/internal: "true"
    glance/icon: di:prometheus
    glance/description: Metrics
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "prometheus.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
